--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     height: 380px;
     width: 1450px;
 }
-.container-fluid-2{
+.container-fluid{
     padding-top: auto auto auto auto;
 }
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
